--- a/css/components/cards.css
+++ b/css/components/cards.css
@@ -1,8 +1,10 @@
 /* Your button CSS file */
 .cards {
   display: flex;
-  justify-content: space-around;
-  padding: 24px;
+  justify-content: center;
+  gap: 48px;
+  margin: 48px;
+  flex-wrap: wrap;
 }
 
 .card {
